--- a/Backend/package.json
+++ b/Backend/package.json
@@ -10,8 +10,10 @@
     "backend": "nodemon --env-file=.env app"
   },
   "dependencies": {
+    "bcryptjs": "^3.0.3",
     "dotenv": "^17.2.3",
     "express": "^5.1.0",
+    "jsonwebtoken": "^9.0.2",
     "mongoose": "^9.0.0",
     "nodemon": "^3.1.10"
   }
