--- a/Backend/package.json
+++ b/Backend/package.json
@@ -17,6 +17,7 @@
     "google-auth-library": "^10.5.0",
     "jsonwebtoken": "^9.0.2",
     "mongoose": "^9.0.0",
+    "nodemailer": "^7.0.11",
     "nodemon": "^3.1.10"
   }
 }
