--- a/Backend/package.json
+++ b/Backend/package.json
@@ -7,7 +7,15 @@
   "type": "commonjs",
   "main": "app.js",
   "scripts": {
-    "backend": "nodemon --env-file=.env app"
+    "start": "node app.js",
+    "dev": "nodemon --env-file=.env app.js",
+    "backend": "nodemon --env-file=.env app",
+    "lint": "eslint '**/*.js' --ext .js || true",
+    "format": "prettier --write '**/*.{js,json,md}' || true"
+  },
+  "devDependencies": {
+    "eslint": "^8.57.1",
+    "prettier": "^2.8.8"
   },
   "dependencies": {
     "bcryptjs": "^3.0.3",
